--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.64.2",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.0.5",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
