--- a/.gitignore
+++ b/.gitignore
@@ -28,14 +28,13 @@ build/
 .gradle
 local.properties
 *.iml
+*.hprof
 
 # node.js
 #
 node_modules/
 npm-debug.log
 yarn-error.log
-package-lock.json
-lerna-debug.log
 
 # BUCK
 buck-out/
@@ -57,16 +56,6 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-# CocoaPods
+# Ruby / CocoaPods
 /ios/Pods/
-
-# build artificial
-lib/
-/bundle/
-coverage/
-
-# umi
-.umi
-.umi-production
-.env.local
-dist/
+/vendor/bundle/
