--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-native": "0.68.1",
+    "react-native-gesture-handler": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,5 +44,5 @@
     "react-test-renderer": "17.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
-  },
+  }
 }
