--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-gesture-handler": "^2.4.1"
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,6 +42,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "prettier": "^2.6.2",
+    "react-native-iconfont-cli": "^2.2.4",
     "react-test-renderer": "17.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
