--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "eloquence",
+  "name": "hybrid-earth",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "lint": "eslint ."
+    "build": "react-native bundle --platform ios --dev false --entry-file index.tsx --bundle-output ./bundle/main.jsbundle --assets-dest ./bundle",
+    "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/stack": "^6.2.1",
-    "axios": "^0.26.1",
-    "react": "17.0.2",
-    "react-native": "0.68.1",
-    "react-native-gesture-handler": "^2.4.1",
-    "react-native-svg": "^12.3.0"
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
+    "jotai": "^2.0.3",
+    "react": "^18.2.0",
+    "react-native": "0.71.5",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react": "^18.0.6",
-    "@types/react-native": "^0.67.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react-app": "^10.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "@react-native-community/eslint-config": "^3.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "prettier": "^2.6.2",
-    "react-native-iconfont-cli": "^2.2.4",
-    "react-test-renderer": "17.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.5",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
