--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,14 @@ plugins {
 
 
 repositories {
+    maven { url 'https://maven.aliyun.com/repository/central/' }
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/google/' }
+    maven { url 'https://maven.aliyun.com/repository/jcenter/' }
     google()
-    mavenCentral()
     gradlePluginPortal()
+    mavenLocal()
+    mavenCentral()
 }
 
 react {
